--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<nav>
-  <a routerLink="/ex1">MINI WORD</a> |
-  <a routerLink="/ex2">MINI WORD 2</a> |
-</nav>
-<router-outlet>
+<app-navbar />
+<hr />
 
-</router-outlet>
+<router-outlet></router-outlet>
+<hr />
+
